# limine-meson-c-kernel-starter

./: .gitignore  README.md  meson.build  meson.options
.devcontainer/: Dockerfile  devcontainer.json
res/: limine.conf
res/cross-files/: aarch64-gcc.ini  riscv64-gcc.ini  x86_64-gcc.ini
res/include/: khalt.h  kmain.h
res/linker/: linker-aarch64.ld  linker-riscv64.ld
scripts/: make_image.py  setupenv.sh
src/: kmain.c
src/arch/aarch64/: boot.c
src/arch/aarch64/utilities/: khalt.c
src/arch/x86_64/utilities/: khalt.c
